--- a/tox.ini
+++ b/tox.ini
@@ -8,17 +8,17 @@ setenv =
   PIP_CONSTRAINT = {toxinidir}/requirements/requirements-all.txt
 
 [common]
-code_dirs = {toxinidir}/pattern_service {toxinidir}/core
+code_dirs = {toxinidir}/src/pattern_service
 
 [testenv:mypy]
+allowlist_externals = bash
 deps =
   -c {env:PIP_CONSTRAINT}
   mypy
   django-stubs[compatible-mypy]
   djangorestframework-stubs[compatible-mypy]
-skip_install =
-  true
-commands = mypy -p core -p pattern_service
+commands = bash {toxinidir}/run_mypy.sh
+
 
 [testenv:black]
 depends =
@@ -63,6 +63,7 @@ commands =
   flynt --dry-run --fail-on-change {[common]code_dirs}
 
 [testenv:linters]
+allowlist_externals = {[testenv:mypy]allowlist_externals}
 deps =
   -c {env:PIP_CONSTRAINT}
   {[testenv:black]deps}
@@ -91,6 +92,16 @@ deps =
   pip-tools
 commands =
   pip-compile --output-file=requirements/requirements.txt requirements/requirements.in
+  pip-compile --output-file=requirements/requirements-dev.txt requirements/requirements-dev.in
+
+[testenv:unit_tests]
+allowlist_externals = bash
+setenv = 
+  PS_FEATURE_DISPATCHERD = "false"
+deps =
+  -r{toxinidir}/requirements/requirements-dev.txt
+commands =
+  bash {toxinidir}/run_tests.sh
 
 [flake8]
 # E123, E125 skipped as they are invalid PEP-8.
