--- a/.github/workflows/units.yml
+++ b/.github/workflows/units.yml
@@ -30,11 +30,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements/requirements-dev.txt
+          python -m pip install -U tox
+        shell: bash
 
-      - name: Run migrations
-        run: python manage.py migrate
-
-      - name: Run core tests
-        run: python manage.py test core
-
+      - name: Run unit tests
+        run: tox -e unit_tests -vv
+        shell: bash
