--- a/requirements/requirements-all.txt
+++ b/requirements/requirements-all.txt
@@ -28,6 +28,8 @@ click==8.2.1
     # via black
 cryptography==45.0.4
     # via django-ansible-base
+dispatcherd==2025.5.21
+    # via -r requirements.in
 django==4.2.23
     # via
     #   django-ansible-base
@@ -91,6 +93,8 @@ pyflakes==3.1.0
     # via flake8
 python-mimeparse==2.0.0
     # via aiohttp-utils
+pyyaml==6.0.2
+    # via dispatcherd
 sqlparse==0.5.3
     # via
     #   django
