--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -22,6 +22,8 @@ cffi==1.17.1
     # via cryptography
 cryptography==45.0.4
     # via django-ansible-base
+dispatcherd==2025.5.21
+    # via -r requirements/requirements.in
 django==4.2.23
     # via
     #   django-ansible-base
@@ -59,6 +61,8 @@ pycparser==2.22
     # via cffi
 python-mimeparse==2.0.0
     # via aiohttp-utils
+pyyaml==6.0.2
+    # via dispatcherd
 sqlparse==0.5.3
     # via
     #   django
