adding mac target

--- a/tools/docker/docker-compose-mac.yaml
+++ b/tools/docker/docker-compose-mac.yaml
@@ -1,29 +1,28 @@
 x-environment: &common-env
-  PATTERN_SERVICE_DB_HOST: ps_postgres
+  PATTERN_SERVICE_DB_HOST: postgres
   PATTERN_SERVICE_DB_PORT: 5432
   PATTERN_SERVICE_DB_NAME: pattern
   PATTERN_SERVICE_DB_USER: pattern
-  PATTERN_SERVICE_DB_PASSWORD: pattern123
+  PATTERN_SERVICE_DB_PASSWORD: secret
   PATTERN_SERVICE_FEATURE_DISPATCHERD: "true"
 services:
-  ps_postgres:
+  postgres:
     image: quay.io/sclorg/postgresql-15-c9s:latest
     environment:
       POSTGRESQL_USER: pattern
-      POSTGRESQL_PASSWORD: pattern123
+      POSTGRESQL_PASSWORD: secret
+      POSTGRESQL_ADMIN_PASSWORD: secret
       POSTGRESQL_DATABASE: pattern
     ports:
       - '5432:5432'
     volumes:
       - 'postgres_data:/var/lib/pgsql/data'
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "postgres"]
+      test: [ 'CMD', 'pg_isready', '-U', 'postgres' ]
       interval: 5s
       timeout: 5s
       retries: 3
       start_period: 5s
-    networks:
-      - dev
 
   pattern-service-worker:
     image: localhost/ansible-pattern-service-worker
@@ -39,11 +38,9 @@ services:
       - -c
       - aap-pattern-service-manage worker
     depends_on:
-      ps_postgres:
+      postgres:
         condition: service_healthy
     restart: always
-    networks:
-      - dev
 
   pattern-service-api:
     image: localhost/ansible-pattern-service-api
@@ -64,7 +61,7 @@ services:
     ports:
       - "8000:5000"
     depends_on:
-      ps_postgres:
+      postgres:
         condition: service_healthy
       pattern-service-worker:
         condition: service_started
@@ -73,13 +70,6 @@ services:
       interval: 30s
       timeout: 5s
       retries: 10
-    networks:
-      - dev
-      - default
 
 volumes:
   postgres_data: {}
-
-networks:
-  dev:
-    name: dev
