--- a/requirements/requirements-dev.txt
+++ b/requirements/requirements-dev.txt
@@ -4,6 +4,16 @@
 #
 #    pip-compile --output-file=requirements-dev.txt requirements-dev.in
 #
+aiohappyeyeballs==2.6.1
+    # via aiohttp
+aiohttp==3.12.13
+    # via
+    #   -r requirements/requirements.in
+    #   aiohttp-utils
+aiohttp-utils==3.2.1
+    # via -r requirements/requirements.in
+aiosignal==1.3.2
+    # via aiohttp
 astor==0.8.1
     # via flynt
 black==24.10.0
