--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -18,4 +18,5 @@ RUN python3 manage.py migrate
 
 EXPOSE 5000
 
-CMD ["python3", "/app/manage.py", "runserver", "0.0.0.0:5000"]
+#CMD ["python3", "/app/manage.py", "runserver", "0.0.0.0:5000"]
+CMD ["sh", "-c", "python3 manage.py migrate && python3 manage.py runserver 0.0.0.0:5000"]
