--- a/requirements/requirements-all.txt
+++ b/requirements/requirements-all.txt
@@ -85,9 +85,13 @@ sqlparse==0.5.3
     # via
     #   django
     #   django-ansible-base
+types-requests==2.32.4.20250611
+    # via -r requirements/requirements-dev.in
 typing-extensions==4.13.2
     # via
     #   mypy
     #   psycopg
 urllib3==2.5.0
-    # via requests
+    # via
+    #   requests
+    #   types-requests
