--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "django-ansible-base==2025.5.8",
     "dispatcherd",
     "psycopg",
+    "requests>=2.31.0,<3.0",
 ]
 
 [project.urls]
@@ -73,11 +74,11 @@ strict = true
 disallow_any_generics = false
 disallow_subclassing_any = false
 disallow_untyped_decorators = false
+disable_error_code = ["no-any-return"]
 
 [[tool.mypy.overrides]]
 module = ["ansible_base.*", "dotenv.*", "dispatcherd.*", "dynaconf.*"]
 ignore_missing_imports = true
-
 
 # -------------------------------------
 # Tools: tox
