--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -28,9 +28,7 @@ django-crum==0.7.9
 djangorestframework==3.16.0
     # via django-ansible-base
 dynaconf==3.2.11
-    # via
-    #   -r requirements/requirements.in
-    #   django-ansible-base
+    # via django-ansible-base
 idna==3.10
     # via requests
 inflection==0.5.1
@@ -41,6 +39,8 @@ pycparser==2.22
     # via cffi
 pyyaml==6.0.2
     # via dispatcherd
+requests==2.32.3
+    # via pattern_service (pyproject.toml)
 sqlparse==0.5.3
     # via
     #   django
